@@ -814,6 +814,7 @@
 	<caption>Methods inherited from <a href="class-Rule.html#methods">Rule</a></caption>
 	<tr>
 		<td><code>
+			<a href="class-Rule.html#_API_setDescription"><b>API_setDescription()</b></a>, 
 			<a href="class-Rule.html#_API_setDisabled"><b>API_setDisabled()</b></a>, 
 			<a href="class-Rule.html#_API_setEnabled"><b>API_setEnabled()</b></a>, 
 			<a href="class-Rule.html#_API_setName"><b>API_setName()</b></a>, 
