@@ -1033,18 +1033,18 @@
 		</div>
 		</div></td>
 	</tr>
-	<tr data-order="setDescription" id="_setDescription">
+	<tr data-order="API_setDescription" id="_API_setDescription">
 
 		<td class="attributes"><code>
 			 public 
-			
+			boolean
 			
 			</code>
 		</td>
 
 		<td class="name"><div>
-		<a class="anchor" href="#_setDescription">#</a>
-		<code><b>setDescription</b>( <span>mixed <var>$newdesc</var></span> )</code>
+		<a class="anchor" href="#_API_setDescription">#</a>
+		<code><b>API_setDescription</b>( <span>string <var>$newDescription</var></span> )</code>
 
 		<div class="description short">
 			
@@ -1054,7 +1054,54 @@
 			
 
 
+				<h4>Parameters</h4>
+				<div class="list"><dl>
+					<dt><var>$newDescription</var></dt>
+					<dd><code>string</code><br>$newDescription</dd>
+				</dl></div>
 
+				<h4>Returns</h4>
+				<div class="list">
+					<code>boolean</code><br>true if value was changed<br />
+				</div>
+
+
+
+
+		</div>
+		</div></td>
+	</tr>
+	<tr data-order="setDescription" id="_setDescription">
+
+		<td class="attributes"><code>
+			 public 
+			boolean
+			
+			</code>
+		</td>
+
+		<td class="name"><div>
+		<a class="anchor" href="#_setDescription">#</a>
+		<code><b>setDescription</b>( <span>string <var>$newDescription</var></span> )</code>
+
+		<div class="description short">
+			
+		</div>
+
+		<div class="description detailed hidden">
+			
+
+
+				<h4>Parameters</h4>
+				<div class="list"><dl>
+					<dt><var>$newDescription</var></dt>
+					<dd><code>string</code><br>$newDescription</dd>
+				</dl></div>
+
+				<h4>Returns</h4>
+				<div class="list">
+					<code>boolean</code><br>true if value was changed<br />
+				</div>
 
 
 
@@ -1277,12 +1324,12 @@
 	<tr data-order="description" id="$description">
 		<td class="attributes"><code>
 			protected  
-			mixed
+			string
 		</code></td>
 
 		<td class="name">
 <var>$description</var>		</td>
-		<td class="value"><code></code></td>
+		<td class="value"><code><span class="php-quote">''</span></code></td>
 		<td class="description"><div>
 			<a href="#$description" class="anchor">#</a>
 
