@@ -3,6 +3,7 @@ CHANGELOG
 
 version 1.1.6
 * rule-edit new filter : 'services has'
+* rule->API_setDescription() implemented
 
 
 version 1.1.5
